files/k8s/apps/ghost/ghost.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: ghost 
  labels:
    app: ghost 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: ghost 
  template:
    metadata:
      labels:
        app: ghost 
        version: v0.0.1
    spec:
      containers:
      - name: ghost 
        image: arm32v7/ghost 
        ports:
        - containerPort: 2368
