files/k8s/apps/ghost/service-ghost.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost 
spec:
  ports:
  - name: http 
    targetPort: 2368 
    port: 2368 
  selector:
    app: ghost
