files/k8s/apps/ghost/ingress-ghost.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost 
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: cluster-pi.k8s 
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost 
          servicePort: http
